--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ ul {
   margin-bottom: 0;
   padding-left: 0;
 }
+img {
+  display: block;
+}
 p,
 h1,
 h2,
@@ -32,13 +35,13 @@ h6 {
   padding-right: 15px;
   margin: 0 auto;
 }
-
-header {
+.header-border {
+  border-bottom: 1px solid #e7e9fc;
   background-color: #fff;
 }
 .nav {
   display: flex;
-  justify-content: center;
+  align-items: center;
 }
 .nav-list {
   display: flex;
@@ -62,9 +65,7 @@ header {
   text-transform: uppercase;
   color: #4d5ae5;
   margin-right: 76px;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  display: block;
+  display: inline-block;
 }
 .logo-header {
   font-family: "Raleway", sans-serif;
@@ -117,10 +118,9 @@ header {
   background-color: #2e2f42;
   max-width: 1440px;
   margin: 0 auto;
-}
-.hero-container {
   padding: 188px 0;
 }
+
 .title-main {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
@@ -145,19 +145,22 @@ header {
   cursor: pointer;
   background-color: #4d5ae5;
   display: block;
-  padding-bottom: 188px;
-  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
   margin: 0 auto;
 }
 .title-button:hover,
 .title-button:focus {
   background-color: #404bbf;
 }
-.about .container {
+.about {
   padding: 120px 0;
 }
 .about-flex {
   display: flex;
+  gap: 24px;
 }
 .visually-hidden {
   position: absolute;
@@ -178,7 +181,7 @@ header {
   line-height: 120%;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 .about-item {
   width: calc((100% - 24px * 3) / 4);
@@ -194,22 +197,13 @@ header {
 }
 .teem {
   background-color: #f4f4fd;
+  padding: 120px 0;
 }
 .teem-flex {
   display: flex;
   gap: 24px;
 }
-.teem .container {
-  padding: 120px 0;
-}
-.teem-border {
-  border-radius: 0 0 4px 4px;
-  border: 0 solid #ffffff;
-  background-color: #ffffff;
-  padding: 0px 0px 32px 0px;
-  width: 264px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+.teem-item {
 }
 
 .teem-title {
@@ -222,10 +216,15 @@ header {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 .teem-list {
   width: calc((100% - 24px * 3) / 4);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  border: 0 solid #ffffff;
+  background-color: #ffffff;
 }
 .list-title {
   font-family: "Roboto", sans-serif;
@@ -236,8 +235,9 @@ header {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  padding-bottom: 8px;
-  padding-top: 32px;
+  text-align: center;
+  margin-bottom: 8px;
+  margin-top: 32px;
 }
 .list-text {
   font-family: "Roboto", sans-serif;
@@ -248,7 +248,11 @@ header {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
-  padding-bottom: 32px;
+  text-align: center;
+  margin-bottom: 32px;
+}
+.portfolio {
+  padding: 120px 0 120px 0;
 }
 .portfolio-title {
   font-family: "Roboto", sans-serif;
@@ -260,17 +264,20 @@ header {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
-  padding-bottom: 72px;
-  padding-top: 120px;
+  margin-bottom: 72px;
 }
 .portfolio-flex {
   display: flex;
   flex-wrap: wrap;
   gap: 48px 24px;
 }
-.portfolio-container {
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+.portfolio-border {
+  padding: 32px 16px;
   border: 1px solid #e7e9fc;
-  width: 360px;
+  border-top: none;
 }
 .portfolio-list-title {
   font-family: "Roboto", sans-serif;
@@ -280,9 +287,7 @@ header {
   line-height: 120%;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-top: 32px;
+  margin-bottom: 8px;
 }
 .portfolio-list-text {
   font-family: "Roboto", sans-serif;
@@ -292,14 +297,12 @@ header {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-left: 16px;
-  padding-bottom: 32px;
 }
 .footer {
   background-color: #2e2f42;
   max-width: 1440px;
   margin: 0 auto;
-  margin-top: 120px;
+  padding: 100px 0;
 }
 .footer-text {
   font-family: "Roboto", sans-serif;
@@ -309,7 +312,7 @@ header {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding-top: 16px;
+  max-width: 264px;
 }
 .logo-footer {
   font-family: "Raleway", sans-serif;
@@ -321,7 +324,16 @@ header {
   text-transform: uppercase;
   color: #f4f4fd;
 }
-.footer-container {
-  max-width: 264px;
-  padding: 100px 0;
+.logo-2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  line-height: 117%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  margin-right: 76px;
+  display: inline-block;
+  margin-bottom: 16px;
 }
