--- a/css/styles.css
+++ b/css/styles.css
@@ -163,15 +163,7 @@ h6 {
   gap: 24px;
 }
 .visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  white-space: nowrap;
-  border: 0;
+  display: none;
 }
 .about-title {
   font-family: "Roboto", sans-serif;
@@ -204,6 +196,7 @@ h6 {
   gap: 24px;
 }
 .teem-item {
+  padding: 32px 0;
 }
 
 .teem-title {
@@ -237,7 +230,6 @@ h6 {
   color: #2e2f42;
   text-align: center;
   margin-bottom: 8px;
-  margin-top: 32px;
 }
 .list-text {
   font-family: "Roboto", sans-serif;
@@ -249,7 +241,6 @@ h6 {
   text-align: center;
   color: #434455;
   text-align: center;
-  margin-bottom: 32px;
 }
 .portfolio {
   padding: 120px 0 120px 0;
@@ -275,7 +266,9 @@ h6 {
   width: calc((100% - 48px) / 3);
 }
 .portfolio-border {
-  padding: 32px 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
@@ -324,7 +317,7 @@ h6 {
   text-transform: uppercase;
   color: #f4f4fd;
 }
-.logo-2 {
+.logo-two {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
