--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ h6 {
   display: flex;
   gap: 24px;
 }
-.visually-hidden {
+.hidden {
   display: none;
 }
 .about-title {
@@ -196,7 +196,7 @@ h6 {
   gap: 24px;
 }
 .teem-item {
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 
 .teem-title {
