--- a/css/styles.css
+++ b/css/styles.css
@@ -162,8 +162,17 @@ h6 {
   display: flex;
   gap: 24px;
 }
-.hidden {
-  display: none;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  white-space: nowrap;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(100%);
+  border: 0;
 }
 .about-title {
   font-family: "Roboto", sans-serif;
@@ -196,7 +205,7 @@ h6 {
   gap: 24px;
 }
 .teem-item {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .teem-title {
@@ -266,9 +275,7 @@ h6 {
   width: calc((100% - 48px) / 3);
 }
 .portfolio-border {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
+  padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
