--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,7 @@ h6 {
   color: #fff;
   max-width: 496px;
   margin: 0 auto;
-  padding-bottom: 48px;
+  margin-bottom: 48px;
 }
 .title-button {
   font-family: "Roboto", sans-serif;
